    ADDED: Brief view
    ADDED: GUI for configuring the atomic extensions in Konfigurator

    FIXED: Valgrind: Invalid Read at switching to a panel profile
    FIXED: [ 1631578 ] Config error (caused by italian handbook)
    FIXED: Problems with zip file names containing '[' character
    FIXED: Autoconfigure doesn't tell that packing is enabled by 7z
    FIXED: Problem with unpacking passworded ZIP files
    FIXED: Compile problem with automake-1.10 (thanks to Sausi at the forums)
    FIXED: FTP crash at slow servers
    FIXED: ACL compile problem on FreeBSD
    FIXED: in pack dialog, if two passwords are empty, a message would say
           "passwords are equal"

     I18N: Updated a feature description in Konfigurator to match the new
           menubar (thanks Doutor Zero)

  REMOVED: Outdated and unused Italian handbook translation


1.80.0-beta1 "The Last Krusade"
===============================
    
    ADDED: quotation mark handling at search (ex. "Program Files")
    ADDED: full support for ACL permissions (properties, preserve attrs,
           synchronizer)
    ADDED: credit for Vaclav Juza and Jiri Palecek in the about box
    ADDED: Experimental input method support in quick search
           (patch by Jiri Palecek)
    ADDED: TerminalEmulator: Ctrl+F switches between full-widget TE, normal TE
           (thanks to Vaclav Juza)
    ADDED: Ctrl+Up from panel focuses the origin editbox, Ctrl+Down from origin
           editbox focuses the panel (thanks to Vaclav Juza)
    ADDED: TerminalEmulator: Ctrl+Shift+Up/Down always focus/unfocus TE
           independently whether the command line is shown or not
    ADDED: TerminalEmulator: if the command line is hidden,
           TE receives Ctrl+Up / Ctrl+Down (thanks to Vaclav Juza)
    ADDED: Pimped KDE's KeyDialog in order to provide import/export abilities
    ADDED: UserAction: Outputcollectionwindow can now save the buffer
    ADDED: UserAction: Outputcollection now supports fonts with fixed or