@@ -1,6 +1,7 @@
     ADDED: Brief view
     ADDED: GUI for configuring the atomic extensions in Konfigurator
 
+    FIXED: [ 1629450 ] Editing files in a separate window
     FIXED: Valgrind: Invalid Read at switching to a panel profile
     FIXED: [ 1631578 ] Config error (caused by italian handbook)
     FIXED: Problems with zip file names containing '[' character
